# learning-cuda

./: .gitignore  README.md
conda/: learn_dev_cuda10.2.yml
cpp/: CMakeLists.txt
cpp/cmake/: EvalGpuArchs.cmake
cpp/count/: main.cu
cpp/include/learning_cuda/2d_heat/: 2d_heat.cuh  2d_heat_kernels.cuh
cpp/include/learning_cuda/count/: count.cuh  count_kernels.cuh
cpp/include/learning_cuda/sparse/norm/: norm.cuh  norm_kernels.cuh  utils.cuh
cpp/src/2d_heat/: 2d_heat.cu
cpp/src/count/: count.cu  count_impl.cuh  main.cu
cpp/src/sparse/norm/: norm.cu
